Tue Feb 19 23:53:06 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-settings-font.c: set the font path and handle cursors.

2002-02-13  Lauris Kaplinski  <lauris@ximian.com>

	* gnome-settings-xsettings.c: #include <string.h> to kill warning

Tue Feb 12 01:34:19 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-settings-daemon.c (main): add session management.

2002-02-10  Richard Hestilow  <hestilow@ximian.com>

	* gnome-settings-xsettings.c: Added font setting.

2002-02-04  Lauris Kaplinski  <lauris@ximian.com>

	* gnome-settings-locate-pointer.c (locate_pointer_expose): Return
	FALSE on default case, instead of nothing
	(setup_window): Replace deprecated methods

	* gnome-settings-sound.c (reload_foreach_cb): Replace deprecated
	methods

2002-01-13  Seth Nickell  <snickell@stanford.edu>

	reviewed by: <delete if not using a buddy>

	* Makefile.am:

2002-01-28  Richard Hestilow  <hestilow@ximian.com>

	* Link to libbackground.la.
	
2002-01-21  Anders Carlsson  <andersca@gnu.org>

	* gnome-settings-xsettings.c: Add support for changing themes.

Mon Jan 21 01:29:57 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-settings-keyboard.c: Move locate_pointer out.

	* gnome-settings-mouse.c: Move locate_pointer in.  Clean up code.
	Remove print statements.

2002-01-14  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (INCLUDES): Added missing -I$(top_srcdir)
	(bin_PROGRAMS): Rename binary gnome2-settings-daemon

	* gnome-settings-daemon.c (main): Enable code to load settings;
	call gnome_settings_background_load too

	* gnome-settings-background.c (gnome_settings_background_init):
	Use the correct key to register the callback

Wed Jan  9 21:22:30 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-settings-keyboard.c (filter): weee!  locate_cursor works
	now!!!!
	* gnome-settings-locate-pointer: speed up animation.

2002-01-09  Anders Carlsson  <andersca@gnu.org>

	* gnome-settings-daemon.c (main): Call gconf_client_add_dir.
